Project

General

Profile

Actions

Bug #4782

closed

usba shouldn't abuse ddi_get_time(9f)

Added by Josef Sipek about 9 years ago. Updated about 9 years ago.

Status:
Closed
Priority:
Low
Assignee:
Category:
driver - device drivers
Start date:
2014-04-17
Due date:
% Done:

100%

Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
External Bug:

Description

ddi_get_time() returns a Unix timestamp based on the current TOD. If the TOD setting changes for whatever reason (daylight saving time adjustments, NTP), the value returned by ddi_get_time() may change non-monotonically. This makes it unsuitable for calculating timeouts and wait times.


Related issues

Related to illumos gate - Bug #4776: man: don't lie about ddi_get_time(9f) usesClosedJosef Sipek2014-04-17

Actions
Actions #1

Updated by Electric Monk about 9 years ago

  • Status changed from New to Closed
  • % Done changed from 80 to 100

git commit e5815e7afac983d9ae9b2316e5056c8401cf7e5e

commit  e5815e7afac983d9ae9b2316e5056c8401cf7e5e
Author: Josef 'Jeff' Sipek <josef.sipek@nexenta.com>
Date:   2014-05-14T23:37:42.000Z

    4782 usba shouldn't abuse ddi_get_time(9f)
    Reviewed by: Robert Mustacchi <rm@joyent.com>
    Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com>
    Approved by: Richard Lowe <richlowe@richlowe.net>

Actions

Also available in: Atom PDF